fix: try to fix overflow

--- a/profile card/style.css
+++ b/profile card/style.css
@@ -4,23 +4,24 @@
 .attribution a { color: hsl(228, 45%, 44%); }
 body{
     background-color:hsl(185, 75%, 39%);
+   
    /* height:100vh;
     width:100vw;*/
-    /*overflow:hidden;*/
-  /* background-attachment: fixed;
-   background-repeat: no-repeat;*/
+    overflow:hidden;
+  /* background-attachment: fixed;*/
+   background-repeat: no-repeat;
    font-family: 'Kumbh Sans', sans-serif;
     
 }
 .firstImg{
     position:absolute;
-    top:-79%;
-    left:-21%;
+    right: 49%;
+bottom: 25%;
 }
 .lastImg{
     position:absolute;
-    bottom:-111%;
-    right:-22%;
+    top: 60%;
+    left: 50%;
 }
 .card{
     width:350px;
@@ -28,8 +29,8 @@ body{
    
     position:absolute;
     border-radius:1rem;
-    top:27%;
-    left:40%;
+    bottom: 14%;
+right: 35%;
     
 }
 .coverpht{
@@ -126,5 +127,12 @@ color:rgb(121, 121, 121);
     background-color: white;
     border-radius: 0 0 1rem 1rem;
   
+
+}
+@media screen and (max-width:450px){
+    .card{
+        right:0;
+        left:13%;
+    }
 
 }
